-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
When a tx completes kiblnd_tx_complete() callback is invoked. We ensure:
LASSERT (tx->tx_sending > 0);
However this assert is being triggered in some rare scenarios.
The reasosn tx_sending would be 0 at this point is because:
- ib_post_send() failed but OFED stack is still sending a tx complete event
- we're getting two different events for the same tx
Instead of asserting, it'll be better to ignore that tx_complete event and print some more details on the tx in question.